# TorQ

./: .gitignore  LICENSE  README.md  RELEASE.md  pyproject.toml
TorQ.egg-info/: PKG-INFO
scripts/: release_preflight.py
src/TorQ.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/torq/: Ansatz.py  Controls.py  Dtypes.py  Layout.py  Measure.py  Ops.py  QLayer.py  QLayer_old.py  Rotations.py  SingleQubitGates.py  Templates.py  __init__.py  _like.py  _pennylane_backend.py  simple.py
tests/: _legacy_utils.py  conftest.py  test_full_config.py  test_legacy_gradient_parity.py  test_legacy_parity.py  test_measure.py  test_measure_pennylane_parity.py  test_metadata.py  test_new_ansatzes.py  test_pennylane_backend.py  test_quick_smoke.py
